monthHead has smaller text to fix overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,7 @@ border: 1px solid black;
   line-height: 50px;
   background-color: red;
   color: white;
+  font-size: 12px;
   /*display: inline-block;*/
 }
 .inputBoxSmall {
@@ -231,6 +232,7 @@ border: 1px solid black;
   font-size: 25px;
   text-align: center;
 }
+
 .calender-container {
     border: 10px solid white;
     border-radius: 5px;
